# Proiect-IOCIS

./: .gitattributes  .gitignore  .lfsconfig  UpgradeLog.htm
Assets/: DefaultNetworkPrefabs.asset  Main.unity  Menu.unity  New Terrain.asset  ObjectCollision.cs  surgeonbones.controller
Assets/Animations/: SurgeonController.controller
Assets/Materials/: NewBrush.brush  Terrian.mat
Assets/Resources/: UnityGLTFSettings.asset
Assets/UI Toolkit/: PanelSettings.asset
Assets/Utils/City/: City.mtl  City3DS.3ds
Assets/Utils/Patient/: Patient.fbx
Assets/Utils/Surgeon/: Surgeon.mtl  surgeonbones.controller
Assets/Utils/SurgeonMoving/: Armature_001.controller  Armature_Armature_mixamo.com_Layer0.001.anim  New Animator Controller.controller  Player.fbx  Player.prefab  SurgeonAnims.fbx  SurgeonController.controller  SurgeonNew.controller  SurgeonNew.fbx  SurgeonWithBones.blend  surgeonbones.fbx  surgeonboneswithanimations.controller  (+4 more)
Assets/Utils/Wrappers/OpenCV/: CMakeLists.txt  opencv_wrapper.cpp
Assets/Utils/Wrappers/Speech/: CMakeLists.txt  speech_wrapper.cpp
Assets/src/: AddCallback.cs  AnimationState.cs  AttachObjectToHand.cs  ChatGPTRequest.cs  DLLWrapper.cs  HelpPanelControl.cs  MenuController.cs  MouseOver.cs  Movements.cs  NetworkPlayer.cs  NetworkServer.cs  ObjectInteraction.cs  OnCameraRetarget.cs  OnPlayerInProximity.cs  OnToolSelect.cs  OnWebCamera.cs  RayCastInteraction.cs  RaycastController.cs  RemoveDuplicateCamera.cs  ShowCanvasButton.cs  SpeechInput.cs  ToggleCamera.cs  VocalAssistant.cs  WebCamera.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+47 files in other folders)
